# btypes

./: .gitignore  Cargo.toml  README.md
examples/: bool_ex.rs  inf_cap_bool_ex.rs  low_cap_bool_ex.rs  low_cap_ex.rs  string_ex.rs
src/: bbool.rs  bstring.rs  error.rs  inf_bbool.rs  inf_named_bools.rs  lib.rs  named_bools.rs  readmedoctest.rs  tests.rs  traits.rs
