[package]
name = "btypes"
version = "0.1.1"
edition = "2021"
authors = ["A User"]
description = "For when you dislike normal types, I guess."
license = "GPL-3.0"

[lib]
name = "btypes"
path = "src/lib.rs"

[[example]]
name = "b"
path = "examples/bool_ex.rs"

[[example]]
name = "lcb"
path = "examples/low_cap_bool_ex.rs"

[[example]]
name = "s"
path = "examples/string_ex.rs"

[features]
default = []
named_bools = ["bools"]
bools = []
strings = []
all = ["named_bools", "bools", "strings"]

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
num-traits = "0.2.19"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
url = "2.5.4"
urlencoding = "2.1.3"
